# odoo-ce

./: .editorconfig  .env.example  .env.production  .flake8  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  ANALYTICS_ACTIVATION_SEQUENCE.md  AUDIT_FIXES_APPLIED.md  AUTO_HEALING_SYSTEM_SUMMARY.md  CHANGELOG.md  CI_CD_AUTOMATION_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_DEPLOYMENT_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_VALIDATION_REPORT.md  DEPLOYMENT_VERIFICATION.md  DEPLOYMENT_WORKFLOW.md  Dockerfile  Dockerfile.delta  Dockerfile.prod  Dockerfile.v0.10.0  EXECUTE_NOW.md  FINANCE_PPM_CE_DASHBOARD_GUIDE.md  FINANCE_PPM_DASHBOARD_GUIDE.md  FINANCE_PPM_IMPORT_GUIDE.md  IDENTITY_CHATOPS_DEPLOYMENT_SUMMARY.md  KAPA_STYLE_DOCS_ASSISTANT_IMPLEMENTATION.md  MATTERMOST_OPEX_INTEGRATION.md  MCP_QUICK_START.md  Makefile  NOVEMBER_2025_PPM_GO_LIVE_SUMMARY.md  ODOO_18_VSCODE_SETUP.md  PROJECT_WRAPPER_IMPLEMENTATION.md  README.md  RELEASE_v0.9.0.md  SITEMAP.md  STRATEGIC_PPM_ANALYTICS_SUMMARY.md  TREE.md  (+26 more)
.claude/: project_memory.db  query_memory.py  settings.local.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: .gitkeep  auto-sitemap-tree.yml  build-image.yml  ci-odoo-ce.yml  ci-odoo-oca.yml  deploy.yml  module-check.yml  odoo-ci.yml  odoo-parity-tests.yml  pre-commit.yml
addons/insightpulse/: README.rst  __manifest__.py
agents/: AGENT_SKILLS_REGISTRY.yaml  ORCHESTRATOR.md  smart_delta_oca.yaml
baselines/: v0.2.1-quality-baseline-20251121.txt
config/: odoo.conf
data/: bir_calendar_2026.json  employee_directory.json  notion_tasks_deduplicated.json  notion_tasks_parsed.json  notion_tasks_with_logframe.json  users_import.csv
deploy/: .env.production.template  docker-compose.prod.v0.10.0.yml  docker-compose.prod.v0.9.1.yml  docker-compose.prod.yml  docker-compose.yml  monitoring_schema.sql  monitoring_views.sql  odoo-auto-heal.service  odoo.conf
dev-docker/: .env.example  Dockerfile  docker-compose.yml
docs/: 003-odoo-ce-custom-image-spec.md  AGENTIC_CLOUD_PRD.md  APP_ICONS_README.md  AUTOMATED_TROUBLESHOOTING_GUIDE.md  CLAUDE_MEMORY.md  CUSTOM_IMAGE_SUCCESS_CRITERIA.md  DB_TUNING.md  DEPLOYMENT_NAMING_MATRIX.md  DIGITALOCEAN_VALIDATION_FRAMEWORK.md  DOCKERFILE_COMPARISON.md  DOCKER_CD_MIGRATION_GUIDE.md  DOCKER_VALIDATION_GUIDE.md  DOKS_DEPLOYMENT_SUCCESS_CRITERIA.md  EXECUTIVE_SUMMARY.md  FINAL_DEPLOYMENT_GUIDE.md  FINAL_DEPLOYMENT_RUNBOOK.md  FINAL_OPERABILITY_CHECKLIST.md  FINANCE_PPM_IMPLEMENTATION.md  FINANCE_WORKFLOW_RACI_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  KEYCLOAK_IDENTITY_PROVIDER_DEPLOYMENT.md  KUBERNETES_MIGRATION_SPECIFICATION.md  MATTERMOST_ALERTING_SETUP.md  MATTERMOST_CHATOPS_DEPLOYMENT.md  MCP_IMPLEMENTATION_STATUS.md  MIXED_CONTENT_FIX.md  MVP_GO_LIVE_CHECKLIST.md  N8N_CREDENTIALS_BOOTSTRAP.md  OCA_MIGRATION.md  ODOO18_ENTERPRISE_TO_CE_OCA_MAPPING.md  ODOO_18_CE_CHEATSHEET.md  ODOO_ARCHITECT_PERSONA.md  ODOO_CE_DEPLOYMENT_SUMMARY.md  ODOO_CE_v0.9.0_SECURITY_AUDIT_REPORT.md  ODOO_HTTPS_OAUTH_TROUBLESHOOTING.md  OFFLINE_TARBALL_DEPLOYMENT.md  PPM_NOVEMBER_2025.md  PRD_SPECIFICATION_KIT.md  PRD_TARGET_IMAGE.md  PROD_READINESS_GAPS.md  (+15 more)
docs-assistant/: DEPLOYMENT_GUIDE.md
ipai_addons/: ipai_ce_branding  ipai_dev_studio_base  ipai_finance_ppm  ipai_industry_marketing_agency  ipai_workspace_core
mcp/: agentic-cloud.yaml  claude_memory_server.py
notion-n8n-monthly-close/: DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  N8N_CLI_README.md
oca_addons/: account-closing  account-financial-reporting  account-financial-tools  account-invoicing  calendar  contract  dms  hr-expense  maintenance  project  purchase-workflow  reporting-engine  server-tools  web
odoo/: ipai_finance_closing_seed.json
prompts/: README.md
schema/: claude_memory_schema.sql
scripts/: auto_error_handler.sh  backup_odoo.sh  build_and_push_version.sh  build_production_image.sh  build_v0.10.0.sh  build_v0.9.1.sh  cleanup-branches.sh  convert_csv_to_xml.py  convert_seed_to_xml.py  deploy_custom_image.sh  deploy_notion_tasks.sh  deploy_prod.sh  enhanced_health_check.sh  entrypoint.sh  erp_config_cli.sh  full_deploy_sanity.sh  gen_repo_tree_fallback.sh  generate_2026_schedule.py  generate_finance_dashboard.py  generate_seed_xml.py  healthcheck_odoo.sh  init_claude_memory_db.py  install_ipai_finance_ppm.sh  install_marketing_agency.sh  install_module_xmlrpc.py  map_logframe.py  migrate_yaml_to_sqlite.py  odoo_mattermost_integration.py  package_image_tarball.sh  parse_notion_tasks.py  pre_install_snapshot.sh  resolve_conflicts.py  seed_marketing_agency.sh  simple_deploy.sh  smoketest.sh  test_deploy_local.sh  update_claude_memory_from_diff.py  update_diagram_manifest.py  verify-https.sh  verify_backup.sh  (+1 more)
skills/: architecture_diagrams.skill.json  superset_mcp.skill.json
spec/: constitution.md  plan.md  prd.md  tasks.md
specs/: 003-odoo-custom-image.prd.md  003-vibe-studio.prd.md
workflows/: SHADOW_ENTERPRISE_STACK.md  WEBHOOK_DEPLOYMENT_GUIDE.md  n8n_bir_deadline_webhook.json  n8n_enrichment_agent.json  n8n_ocr_expense_webhook.json  n8n_scout_sync_webhook.json
(+537 files in other folders)
